--- a/history/swiper/swiper_style.css
+++ b/history/swiper/swiper_style.css
@@ -2,48 +2,164 @@
     --text-color: hsl(226.67deg 11.84% 70.2%);
 }
 
-.tl-grid-container {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-}
+/* Dark Mode START */
 
-.tl-grid-container a {
-    padding: 2rem;
-
-    border-color: var(--text-color);
-    border-block-end: solid;
-
-    text-align: center;
-    color: var(--text-color);
-    text-decoration: none;
-    font-size: larger;
-}
-
-.tl-grid-container a:target {
-    border: solid;
-}
-
-.tl-grid-container a:nth-child(10n + 5),
-.tl-grid-container a:nth-child(10n + 6) {
-    border: none;
-}
-
-.tl-grid-container a:nth-child(10n) {
-    border: solid;
-    border-left: none;
-    border-radius: 0 50px 50px 0;
-}
-
-.tl-grid-container a:nth-child(10n + 11) {
-    border: solid;
-    border-right: none;
-    border-radius: 50px 0 0 50px;
-}
-
-
-
-/* Dark Mode */
 html {
     background-color: rgb(29, 30, 34);
+    /* overflow: hidden; */
+}
+
+h1 {
+    color: var(--text-color);
+    text-align: center;
+    margin: 50px 0;
+}
+
+.tl-container h2 {
+    color: hsl(51, 100%, 25%);
+    font-weight: normal;
+}
+
+/* Dark Mode END */
+
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+}
+
+.tl-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-auto-rows: min-content;
+    justify-items: center;
+    width: clamp(500px, 1000px, 2000px);
+}
+
+input {
+    width: 25px;
+    height: 25px;
+    background-color: maroon;
+    border-radius: 50%;
+    appearance: none;
+    cursor: pointer;
+}
+
+input::before,
+input::after {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: maroon;
+    width: 112.5px;
+    height: 5px;
+}
+
+input::before {
+    transform: translateY(10px);
+}
+
+input::after {
+    transform: translate(-87.5px, 10px);
+}
+
+input:checked {
+    background-color: maroon;
+}
+
+input:checked::after {
+    background-color: maroon;
+}
+
+input:checked::before {
+    background-color: goldenrod;
+}
+
+input:checked~input,
+input:checked~input::before,
+input:checked~input::after {
+    background-color: goldenrod;
+}
+
+.info-container {
+    text-align: center;
+    width: 100%;
+    margin-top: 50px;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.info-container div {
+    display: none;
+}
+
+/* input[data-description="2017-18"]:checked {
+    background-color: red !important;
+} */
+
+/* .info-container>.history-info[data-description="2017-18"] {
+    display: block;
+    background-color: blue;
+    color: purple;
+} */
+
+input[data-description="2017-18"]:checked~.info-container>.history-info[data-description="2017-18"] {
+    background-color: red !important;
+    display: block !important;
+}
+
+/* input[data-description="1920"]:checked~.tl-info-container p[data-description="1920"] {
+    display: block;
+}
+
+input[data-description="1930"]:checked~.tl-info-container p[data-description="1930"] {
+    display: block;
+}
+
+input[data-description="1940"]:checked~.tl-info-container p[data-description="1940"] {
+    display: block;
+}
+
+input[data-description="1950"]:checked~.tl-info-container p[data-description="1950"] {
+    display: block;
+}
+
+input[data-description="1960"]:checked~.tl-info-container p[data-description="1960"] {
+    display: block;
+}
+
+input[data-description="1970"]:checked~.tl-info-container p[data-description="1970"] {
+    display: block;
+}
+
+input[data-description="1980"]:checked~.tl-info-container p[data-description="1980"] {
+    display: block;
+}
+
+input[data-description="1990"]:checked~.tl-info-container p[data-description="1990"] {
+    display: block;
+}
+
+input[data-description="2000"]:checked~.tl-info-container p[data-description="2000"] {
+    display: block;
+} */
+
+
+
+@media (max-width: 900px) {
+    .tl-container {
+        max-width: 600px;
+    }
+}
+
+@media (max-width: 650px) {
+    .tl-container {
+        max-width: 475px;
+    }
+
+    input::before,
+    input::after {
+        z-index: -1;
+    }
 }
