--- a/vgk_timeline_style.css
+++ b/vgk_timeline_style.css
@@ -1,7 +1,37 @@
-/* Dark Mode START */
-
 :root {
     --text-color: hsl(226.67deg 11.84% 70.2%);
+    /* --dark-background-color: rgb(29, 30, 34); */
+    --dark-background-color: #1a1a1a;
+    --light-background-color: rgba(160, 180, 190, 1);
+    --shadow-color: 200deg 14% 33%;
+    --box-shadow:
+        /* 0.5px 0.5px 1.1px hsl(var(--shadow-color) / 0),
+        6.8px 7.2px 14.9px hsl(var(--shadow-color) / 0.13),
+        12.4px 12.9px 26.8px hsl(var(--shadow-color) / 0.25),
+        18.2px 19px 39.5px hsl(var(--shadow-color) / 0.38),
+        25.4px 26.6px 55.2px hsl(var(--shadow-color) / 0.51),
+        35.4px 37px 76.8px hsl(var(--shadow-color) / 0.63),
+        49.1px 51.4px 106.6px hsl(var(--shadow-color) / 0.76),
+        67.9px 71.1px 147.5px hsl(var(--shadow-color) / 0.89); */
+
+        /* 0.5px 0.4px 0.7px hsl(var(--shadow-color) / 0.46),
+        3.6px 3px 5.3px -0.4px hsl(var(--shadow-color) / 0.46),
+        6.9px 5.8px 10.1px -0.7px hsl(var(--shadow-color) / 0.46),
+        11.4px 9.6px 16.8px -1.1px hsl(var(--shadow-color) / 0.46),
+        18.3px 15.5px 27px -1.4px hsl(var(--shadow-color) / 0.46),
+        28.7px 24.3px 42.3px -1.8px hsl(var(--shadow-color) / 0.46),
+        43.7px 37px 64.4px -2.1px hsl(var(--shadow-color) / 0.46),
+        64.5px 54.5px 95px -2.5px hsl(var(--shadow-color) / 0.46); */
+
+        0.5px 0.4px 0.7px hsl(var(--shadow-color) / 0.51),
+        3.9px 3.3px 5.7px -0.4px hsl(var(--shadow-color) / 0.51),
+        7.5px 6.4px 11.1px -0.7px hsl(var(--shadow-color) / 0.51),
+        12.5px 10.6px 18.4px -1.1px hsl(var(--shadow-color) / 0.51),
+        20.2px 17px 29.7px -1.4px hsl(var(--shadow-color) / 0.51),
+        31.6px 26.7px 46.5px -1.8px hsl(var(--shadow-color) / 0.51),
+        48.2px 40.8px 71px -2.1px hsl(var(--shadow-color) / 0.51),
+        71.2px 60.1px 104.8px -2.5px hsl(var(--shadow-color) / 0.51);
+    --gold-color: #BB8F3A;
 }
 
 * {
@@ -9,33 +39,49 @@
 }
 
 html {
-    background-color: rgb(29, 30, 34);
+    background-color: var(--dark-background-color);
+    background-image: linear-gradient(to bottom, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
+    background-image: radial-gradient(circle farthest-corner at 5% 50%, rgba(45, 70, 70, 1) 0%, var(--light-background-color) 80%);
+    background-image: radial-gradient(circle farthest-corner at 5% 50%, var(--dark-background-color) 0%, var(--light-background-color) 100%);
     scroll-behavior: smooth;
 }
-
-/* Dark Mode END */
 
 body {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-family: 'verdana', sans-serif;
+    height: 2700px;
 }
 
 h1 {
     margin: 50px 0;
+    /* text-shadow: 0 2px 3px #747474, 
+      1px 3px 4px #222, 
+      0 8px 3px #474747, 
+      0 11px 4px #747474,
+      0 14px 4px #565656,
+      0 17px 4px #343434,
+      0 20px 4px #171717; */
+    font-size: 3rem;
+    text-shadow: 0 1px 0 hsl(0, 0%, 100%),
+        0 2px 0 hsl(0, 0%, 75%),
+        0 3px 0 hsl(0, 0%, 50%),
+        0 4px 0 hsl(0, 0%, 25%),
+        0 5px 0 hsl(0, 0%, 12.5%),
+        0 6px 1px rgba(0, 0, 0, .1),
+        0 0 5px rgba(0, 0, 0, .1),
+        0 1px 3px rgba(0, 0, 0, .3),
+        0 3px 5px rgba(0, 0, 0, .2),
+        0 5px 10px rgba(0, 0, 0, .25),
+        0 10px 10px rgba(0, 0, 0, .2),
+        0 20px 20px rgba(0, 0, 0, .15);
+    color: var(--dark-background-color);
 }
 
-.tl-wrapper h2 {
-    color: gray;
-    font-weight: normal;
-    margin: 20px, 0;
-    transition: scale 1.2s ease, color 1.2s ease;
-}
-
-h2.active {
-    color: goldenrod;
-    scale: 1.25;
+/* Main Timeline */
+button {
+    box-shadow: var(--box-shadow);
 }
 
 .tl-wrapper {
@@ -46,16 +92,7 @@ h2.active {
     justify-content: center;
     width: clamp(500px, 1000px, 2000px);
     overflow: hidden;
-    margin-block-end: 200px;
-}
-
-.year-info {
-    display: none;
-}
-
-.year-info.active {
-    display: block;
-    height: 600px;
+    margin-block-end: 10vh;
 }
 
 .input-container {
@@ -66,13 +103,26 @@ h2.active {
     text-align: center;
 }
 
+.input-container h2 {
+    color: var(--dark-background-color);
+    font-weight: normal;
+    margin: 20px, 0;
+    transition: scale 1.2s ease, color 1.2s ease;
+}
+
+.input-container h2.active {
+    color: var(--gold-color);
+    scale: 1.25;
+}
+
 .time-line {
     display: block;
     position: relative;
-    background-color: maroon;
+    /* background-color: maroon; */
+    background-color: var(--dark-background-color);
     width: 100%;
     height: 5px;
-    box-shadow: 0px 3px 20px rgba(255, 255, 255, 0.1);
+    /* box-shadow: var(--box-shadow); */
 }
 
 .time-line.before {
@@ -85,11 +135,19 @@ h2.active {
     z-index: -1;
 }
 
+div.time-line.active {
+    background-color: var(--gold-color);
+}
+
+
+
 button.button-year-select {
     width: 25px;
     height: 25px;
     padding: 0;
-    background-color: maroon;
+    /* background-color: maroon; */
+    box-shadow: none;
+    background-color: var(--dark-background-color);
     border: none;
     border-radius: 50%;
     appearance: none;
@@ -98,81 +156,129 @@ button.button-year-select {
 }
 
 button.button-year-select.active {
-    background-color: goldenrod;
+    background-color: var(--gold-color);
     scale: 1.4;
     border: solid white;
 }
 
-div.time-line.active {
-    background-color: goldenrod;
+.under-tl-ad {
+    width: 80%;
+    margin-block-end: 50vh;
 }
 
+.under-tl-ad .ad {
+    height: 100px;
+    width: 100%;
+}
+
+/* Info Page Nav & Outer Wrappers */
 .info-wrapper {
     width: 100%;
     padding: 50px 0px;
 }
 
-.info-wrapper .back-button-wrapper {
+.info-wrapper .nav-button-wrapper {
     display: flex;
     justify-content: center;
+    gap: 5px;
+    /* background-color: rgba(15, 15, 15); */
 }
 
-.info-wrapper .back-button {
-    background-image: linear-gradient(144deg, #B78628, maroon 50%, #FCC201);
+.info-wrapper .nav-button-wrapper .end {
+    min-height: calc(100vh - 4rem);
+}
+
+.info-wrapper .nav-button {
+    background-image: linear-gradient(144deg, var(--light-background-color), var(--gold-color) 50%, var(--dark-background-color));
     border: 0;
     border-radius: 8px;
-    box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
-    box-shadow: 8px 16px 20px rgba(218, 165, 32, 0.05);
     box-sizing: border-box;
     color: #FFFFFF;
     display: flex;
     font-size: 20px;
     padding: 3px;
     cursor: pointer;
-    margin-block-start: 25px;
 }
 
-.info-wrapper .back-button:active,
-.info-wrapper .back-button:hover {
+.info-wrapper .nav-button:active,
+.info-wrapper .nav-button:hover {
     outline: 0;
 }
 
-.info-wrapper .back-button span {
-    background-color: rgb(5, 6, 45);
+.info-wrapper .nav-button span {
+    background-color: rgb(45, 45, 45);
     padding: 16px 24px;
     border-radius: 6px;
     transition: 0.5s;
+    min-width: 175px;
+    max-width: max-content;
 }
 
-.info-wrapper .back-button:hover span {
+.info-wrapper .nav-button:hover span {
     background: none;
 }
 
+/* Individual Year Page Info */
 .year-info {
+    display: none;
     text-align: left;
 }
 
+.year-info.active {
+    display: block;
+    height: 600px;
+}
+
+.major-events-nav {
+    display: flex;
+    justify-content: center;
+    gap: 5px;
+    margin-block-start: 5px;
+    margin-block-end: 30px;
+}
+
+.major-events-nav button {
+    background-color: rgb(45, 45, 45);
+}
+
 /* INFO STYLING */
-.year-info h2 {
-    text-align: center;
+
+.year-header-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 400px;
+}
+
+.year-header-wrapper h2 {
+    color: var(--dark-background-color);
+    background: hsl(0 100% 100% / 30%);
+    padding: 1em;
+    backdrop-filter: blur(10px);
+    border-radius: 10px;
+    z-index: 1;
+}
+
+.year-header-wrapper .header-background {
+    width: 400px;
+    height: 400px;
+    border-radius: 200px;
+    position: absolute;
+    object-fit: cover;
+    background-attachment: fixed;
+    box-shadow: var(--box-shadow);
+}
+
+.year-header-wrapper .ad {
+    width: 200px;
+    height: 200px;
+    box-shadow: var(--box-shadow);
 }
 
 .year-info h3 {
     margin: 0 0 20px 0;
-}
-
-.year-info .img-container img {
-    box-shadow: 8px 16px 20px rgba(150, 150, 150, 0.1);
-    width: 50%;
-    height: 50%;
-    border-radius: 10px;
-}
-
-.year-info .img-container {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-block-end: 50px;
 }
 
 .year-info .time-post {
@@ -184,22 +290,22 @@ div.time-line.active {
     height: min-content;
     width: 48%;
     margin: 5%;
-    border: solid goldenrod;
+    border: solid var(--gold-color);
     border-radius: 10px;
     background-color: rgb(45, 45, 45);
     padding: 20px;
-    box-shadow: 8px 16px 20px rgba(150, 150, 150, 0.1);
+    box-shadow: var(--box-shadow);
 }
 
 .time-post .right {
     height: min-content;
     width: 48%;
     margin: 5%;
-    border: solid goldenrod;
+    border: solid var(--gold-color);
     border-radius: 10px;
     background-color: rgb(45, 45, 45);
     padding: 20px;
-    box-shadow: 8px 16px 20px rgba(150, 150, 150, 0.1);
+    box-shadow: var(--box-shadow);
 }
 
 .time-post .center-line {
@@ -223,7 +329,7 @@ div.time-line.active {
     /* left: 0;
     right: 0; */
     margin-top: 10%;
-    background-color: goldenrod;
+    background-color: var(--gold-color);
     border: solid 5px #fff;
     border-radius: 100px;
     z-index: 300;
@@ -241,7 +347,94 @@ div.time-line.active {
     opacity: 1;
 }
 
-/* SIZING */
+/* Learn More Button */
+.learn-button-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+a.learn-more {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    outline: none;
+    border: 0;
+    background: transparent;
+    padding: 0;
+    width: 12rem;
+    height: auto;
+}
+
+a.learn-more .circle {
+    transition: all 0.5s cubic-bezier(0.7, 0, 0.07, 1);
+    position: relative;
+    display: block;
+    margin: 0;
+    width: 3rem;
+    height: 3rem;
+    background: var(--text-color);
+    border-radius: 1.625rem;
+}
+
+a.learn-more .circle .icon {
+    transition: all 0.5s cubic-bezier(0.7, 0, 0.07, 1);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    background: var(--text-color);
+}
+
+a.learn-more .circle .icon.arrow {
+    transition: all 0.5s cubic-bezier(0.7, 0, 0.07, 1);
+    left: 0.625rem;
+    width: 1.125rem;
+    height: 0.125rem;
+    background: none;
+}
+
+a.learn-more .circle .icon.arrow::before {
+    position: absolute;
+    content: "";
+    top: -0.3rem;
+    right: 0.0625rem;
+    width: 0.625rem;
+    height: 0.625rem;
+    border-top: 0.125rem solid var(--dark-background-color);
+    border-right: 0.125rem solid var(--dark-background-color);
+    transform: rotate(45deg);
+}
+
+a.learn-more .button-text {
+    transition: all 0.5s cubic-bezier(0.7, 0, 0.07, 1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 0.75rem 0;
+    margin: 0 0 0 1.85rem;
+    color: var(--text-color);
+    font-weight: 700;
+    line-height: 1.6;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+a:hover .circle {
+    width: 100%;
+}
+
+a:hover .circle .icon.arrow {
+    background: var(--dark-background-color);
+    transform: translate(1rem, 0);
+}
+
+a:hover .button-text {
+    color: var(--dark-background-color);
+}
+
+/* Sizing */
 
 @media (max-width: 900px) {
     .tl-wrapper {
@@ -263,5 +456,10 @@ div.time-line.active {
     .year-info .time-post .dot,
     .year-info .time-post .center-line {
         display: none;
+    }
+
+    .year-info .time-post .left,
+    .year-info .time-post .right {
+        width: 80vw;
     }
 }
