--- a/vgk_timeline_style.css
+++ b/vgk_timeline_style.css
@@ -1,37 +1,24 @@
 :root {
-    --text-color: hsl(226.67deg 11.84% 70.2%);
-    /* --dark-background-color: rgb(29, 30, 34); */
+    --text-color: #aaaebc;
     --dark-background-color: #1a1a1a;
-    --light-background-color: rgba(160, 180, 190, 1);
-    --shadow-color: 200deg 14% 33%;
+    --light-background-color: #a0b4be;
+    --gold-color: #bb8f3a;
+    --shadow-color: 0deg 0% 0%;
     --box-shadow:
-        /* 0.5px 0.5px 1.1px hsl(var(--shadow-color) / 0),
-        6.8px 7.2px 14.9px hsl(var(--shadow-color) / 0.13),
-        12.4px 12.9px 26.8px hsl(var(--shadow-color) / 0.25),
-        18.2px 19px 39.5px hsl(var(--shadow-color) / 0.38),
-        25.4px 26.6px 55.2px hsl(var(--shadow-color) / 0.51),
-        35.4px 37px 76.8px hsl(var(--shadow-color) / 0.63),
-        49.1px 51.4px 106.6px hsl(var(--shadow-color) / 0.76),
-        67.9px 71.1px 147.5px hsl(var(--shadow-color) / 0.89); */
+        0.4px 0.5px 0.7px hsl(var(--shadow-color) / 0.33),
+        2.5px 3.1px 4.5px -0.4px hsl(var(--shadow-color) / 0.33),
+        4.6px 5.8px 8.3px -0.7px hsl(var(--shadow-color) / 0.33),
+        7.6px 9.6px 13.8px -1.1px hsl(var(--shadow-color) / 0.33),
+        12.2px 15.3px 22px -1.4px hsl(var(--shadow-color) / 0.33),
+        19px 23.8px 34.3px -1.8px hsl(var(--shadow-color) / 0.33),
+        29px 36.3px 52.3px -2.1px hsl(var(--shadow-color) / 0.33),
+        42.6px 53.4px 76.8px -2.5px hsl(var(--shadow-color) / 0.33);
 
-        /* 0.5px 0.4px 0.7px hsl(var(--shadow-color) / 0.46),
-        3.6px 3px 5.3px -0.4px hsl(var(--shadow-color) / 0.46),
-        6.9px 5.8px 10.1px -0.7px hsl(var(--shadow-color) / 0.46),
-        11.4px 9.6px 16.8px -1.1px hsl(var(--shadow-color) / 0.46),
-        18.3px 15.5px 27px -1.4px hsl(var(--shadow-color) / 0.46),
-        28.7px 24.3px 42.3px -1.8px hsl(var(--shadow-color) / 0.46),
-        43.7px 37px 64.4px -2.1px hsl(var(--shadow-color) / 0.46),
-        64.5px 54.5px 95px -2.5px hsl(var(--shadow-color) / 0.46); */
-
-        0.5px 0.4px 0.7px hsl(var(--shadow-color) / 0.51),
-        3.9px 3.3px 5.7px -0.4px hsl(var(--shadow-color) / 0.51),
-        7.5px 6.4px 11.1px -0.7px hsl(var(--shadow-color) / 0.51),
-        12.5px 10.6px 18.4px -1.1px hsl(var(--shadow-color) / 0.51),
-        20.2px 17px 29.7px -1.4px hsl(var(--shadow-color) / 0.51),
-        31.6px 26.7px 46.5px -1.8px hsl(var(--shadow-color) / 0.51),
-        48.2px 40.8px 71px -2.1px hsl(var(--shadow-color) / 0.51),
-        71.2px 60.1px 104.8px -2.5px hsl(var(--shadow-color) / 0.51);
-    --gold-color: #BB8F3A;
+    --low-shadow:
+        0.4px 0.5px 0.7px hsl(var(--shadow-color) / 0.35),
+        1.4px 1.8px 2.6px -0.8px hsl(var(--shadow-color) / 0.35),
+        3.5px 4.4px 6.3px -1.7px hsl(var(--shadow-color) / 0.35),
+        8.6px 10.8px 15.5px -2.5px hsl(var(--shadow-color) / 0.35);
 }
 
 * {
@@ -39,11 +26,24 @@
 }
 
 html {
-    background-color: var(--dark-background-color);
-    background-image: linear-gradient(to bottom, #3f51b1 0%, #5a55ae 13%, #7b5fac 25%, #8f6aae 38%, #a86aa4 50%, #cc6b8e 62%, #f18271 75%, #f3a469 87%, #f7c978 100%);
-    background-image: radial-gradient(circle farthest-corner at 5% 50%, rgba(45, 70, 70, 1) 0%, var(--light-background-color) 80%);
-    background-image: radial-gradient(circle farthest-corner at 5% 50%, var(--dark-background-color) 0%, var(--light-background-color) 100%);
     scroll-behavior: smooth;
+
+    /* background:
+        radial-gradient(64% 70% at 7% 110%,
+            #ebc84bcc 0%,
+            #f7d66233 52%,
+            #f7d66200 100%),
+        linear-gradient(7deg,
+            #a0b4becc 0%,
+            #80808033 47%,
+            #a0b4be 72%),
+        radial-gradient(88% 0% at -1% 112%,
+            #a0b4be 0%,
+            #bd9139 100%); */
+
+    background: radial-gradient(150% 100% at 16% 130%,
+            rgba(187, 143, 58, 1) 26%,
+            rgba(160, 180, 190, 1) 89%);
 }
 
 body {
@@ -51,19 +51,15 @@ body {
     flex-direction: column;
     align-items: center;
     font-family: 'verdana', sans-serif;
-    height: 2700px;
+    height: auto;
+
 }
 
 h1 {
     margin: 50px 0;
-    /* text-shadow: 0 2px 3px #747474, 
-      1px 3px 4px #222, 
-      0 8px 3px #474747, 
-      0 11px 4px #747474,
-      0 14px 4px #565656,
-      0 17px 4px #343434,
-      0 20px 4px #171717; */
-    font-size: 3rem;
+    font-size: 3.5rem;
+    color: var(--dark-background-color);
+
     text-shadow: 0 1px 0 hsl(0, 0%, 100%),
         0 2px 0 hsl(0, 0%, 75%),
         0 3px 0 hsl(0, 0%, 50%),
@@ -76,13 +72,9 @@ h1 {
         0 5px 10px rgba(0, 0, 0, .25),
         0 10px 10px rgba(0, 0, 0, .2),
         0 20px 20px rgba(0, 0, 0, .15);
-    color: var(--dark-background-color);
 }
 
 /* Main Timeline */
-button {
-    box-shadow: var(--box-shadow);
-}
 
 .tl-wrapper {
     display: grid;
@@ -93,6 +85,7 @@ button {
     width: clamp(500px, 1000px, 2000px);
     overflow: hidden;
     margin-block-end: 10vh;
+    padding-block-end: 40px;
 }
 
 .input-container {
@@ -118,11 +111,10 @@ button {
 .time-line {
     display: block;
     position: relative;
-    /* background-color: maroon; */
     background-color: var(--dark-background-color);
     width: 100%;
     height: 5px;
-    /* box-shadow: var(--box-shadow); */
+    box-shadow: var(--low-shadow);
 }
 
 .time-line.before {
@@ -139,13 +131,10 @@ div.time-line.active {
     background-color: var(--gold-color);
 }
 
-
-
 button.button-year-select {
     width: 25px;
     height: 25px;
     padding: 0;
-    /* background-color: maroon; */
     box-shadow: none;
     background-color: var(--dark-background-color);
     border: none;
@@ -153,6 +142,7 @@ button.button-year-select {
     appearance: none;
     cursor: pointer;
     transition: background-color 1.2s ease, scale 1.2s linear;
+    box-shadow: var(--low-shadow);
 }
 
 button.button-year-select.active {
@@ -174,18 +164,21 @@ button.button-year-select.active {
 /* Info Page Nav & Outer Wrappers */
 .info-wrapper {
     width: 100%;
-    padding: 50px 0px;
+    padding: 50px 0 0 0;
 }
 
 .info-wrapper .nav-button-wrapper {
     display: flex;
     justify-content: center;
     gap: 5px;
-    /* background-color: rgba(15, 15, 15); */
+    z-index: 4;
 }
 
-.info-wrapper .nav-button-wrapper .end {
-    min-height: calc(100vh - 4rem);
+.scroll-past {
+    position: fixed;
+    top: 0;
+    left: 50%;
+    right: 50%;
 }
 
 .info-wrapper .nav-button {
@@ -222,11 +215,12 @@ button.button-year-select.active {
 .year-info {
     display: none;
     text-align: left;
+    height: 0;
 }
 
 .year-info.active {
     display: block;
-    height: 600px;
+    height: auto;
 }
 
 .major-events-nav {
@@ -332,7 +326,7 @@ button.button-year-select.active {
     background-color: var(--gold-color);
     border: solid 5px #fff;
     border-radius: 100px;
-    z-index: 300;
+    z-index: 3;
 }
 
 .year-info .time-post .reveal {
@@ -455,7 +449,7 @@ a:hover .button-text {
 
     .year-info .time-post .dot,
     .year-info .time-post .center-line {
-        display: none;
+        visibility: hidden;
     }
 
     .year-info .time-post .left,
