--- a/vgk_timeline_style.css
+++ b/vgk_timeline_style.css
@@ -27,17 +27,26 @@
 
 html {
     scroll-behavior: smooth;
+}
+
+body {
+    margin: 0;
+    height: auto;
+    font-family: 'verdana', sans-serif;
     background: radial-gradient(150% 100% at 16% 130%,
             rgba(187, 143, 58, 1) 26%,
             rgba(160, 180, 190, 1) 89%);
 }
 
-body {
+.first-page {
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'verdana', sans-serif;
-    height: auto;
+    height: 100vh;
+    background-color: beige;
+    background-size: 100vw 100vh;
+    /* height when ad is present at bottom of page */
+    /* height: calc(100vh - 125px); */
 }
 
 h1 {
@@ -71,7 +80,7 @@ h1 {
     justify-content: center;
     width: clamp(500px, 1000px, 2000px);
     overflow: hidden;
-    margin-block-end: 10vh;
+    /* margin-block-end: 10vh; */
     padding-block-end: 40px;
 }
 
@@ -95,7 +104,7 @@ h1 {
     scale: 1.25;
 }
 
-.time-line {
+.year-input-container .time-line {
     display: block;
     position: relative;
     background-color: var(--dark-background-color);
@@ -106,12 +115,10 @@ h1 {
 
 .time-line.before {
     transform: translateX(-50%) translateY(300%);
-    z-index: -1;
 }
 
 .time-line.after {
     transform: translateX(50%) translateY(-15px);
-    z-index: -1;
 }
 
 div.time-line.active {
@@ -130,6 +137,7 @@ button.button-year-select {
     cursor: pointer;
     transition: background-color 1.2s ease, scale 1.2s linear;
     box-shadow: var(--low-shadow);
+    z-index: 1;
 }
 
 button.button-year-select.active {
@@ -138,15 +146,19 @@ button.button-year-select.active {
     border: solid white;
 }
 
-.under-tl-ad {
-    width: 80%;
+/* AD FOR UNDER TIMELINE */
+
+/* .under-tl-ad {
+    display: flex;
+    justify-content: center;
+    width: 100%;
     margin-block-end: 50vh;
 }
 
 .under-tl-ad .ad {
     height: 100px;
-    width: 100%;
-}
+    width: 80%;
+} */
 
 
 /* MAIN TIMELINE END */
@@ -167,7 +179,9 @@ button.button-year-select.active {
 .info-wrapper .nav-button-wrapper {
     display: flex;
     justify-content: center;
-    z-index: 4;
+    z-index: 3;
+    margin-block-start: 15px;
+    margin-block-end: 32px;
 }
 
 .scroll-past {
@@ -202,6 +216,7 @@ button.button-year-select.active {
 }
 
 .info-wrapper .nav-button span {
+    background-color: var(--dark-background-color);
     background-color: rgb(45, 45, 45);
     padding: 16px 24px;
     transition: 0.5s;
@@ -223,7 +238,6 @@ button.button-year-select.active {
 }
 
 .info-wrapper .nav-button:first-child span {
-    background-color: rgb(45, 45, 45);
     padding: 16px 24px;
     border-top-left-radius: 6px;
     border-bottom-left-radius: 6px;
@@ -246,7 +260,6 @@ button.button-year-select.active {
 }
 
 .info-wrapper .nav-button:last-child span {
-    background-color: rgb(45, 45, 45);
     padding: 16px 24px;
     border-top-right-radius: 6px;
     border-bottom-right-radius: 6px;
@@ -264,11 +277,10 @@ button.button-year-select.active {
 .major-events-wrapper {
     display: flex;
     justify-content: center;
-    gap: 5px;
-    margin-block-start: 25px;
+    margin-block-end: 32px;
 }
 
-.major-events-wrapper .major-button {
+/* .major-events-wrapper .major-button {
     background-image: linear-gradient(90deg, var(--light-background-color), var(--gold-color) 50%, var(--dark-background-color));
     border: 0;
     border-radius: 8px;
@@ -282,13 +294,14 @@ button.button-year-select.active {
 }
 
 .major-events-wrapper .major-button span {
+    background-color: var(--dark-background-color);
     background-color: rgb(45, 45, 45);
     padding: 16px 24px;
     border-radius: 6px;
     transition: 0.5s;
     min-width: 175px;
     max-width: max-content;
-}
+} */
 
 
 /* INFO PAGES -> STICKY NAV BAR & MAJOR EVENTS NAV BAR END */
@@ -308,7 +321,8 @@ button.button-year-select.active {
 .year-header-wrapper {
     position: relative;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 250px;
     align-items: center;
     width: 100%;
     height: 400px;
@@ -342,7 +356,16 @@ button.button-year-select.active {
 }
 
 .year-info h3 {
-    margin: 0 0 20px 0;
+    display: inline-block;
+}
+
+.year-info h3,
+.year-info .date {
+    margin: 0;
+}
+
+.year-info .date {
+    float: right
 }
 
 .year-info .time-post {
@@ -357,6 +380,7 @@ button.button-year-select.active {
     border: solid var(--gold-color);
     border-radius: 10px;
     background-color: rgb(45, 45, 45);
+    /* background-color: hsl(192, 13%, 15%); */
     padding: 20px;
     box-shadow: var(--low-shadow);
 }
@@ -368,17 +392,19 @@ button.button-year-select.active {
     border: solid var(--gold-color);
     border-radius: 10px;
     background-color: rgb(45, 45, 45);
+    /* background-color: hsl(192, 13%, 15%); */
     padding: 20px;
     box-shadow: var(--low-shadow);
 }
 
 .time-post .center-line {
     width: 5px;
-    height: calc(100% -50px);
+    /* height: calc(100% - 50px); */
     background-color: white;
 }
 
 .time-post img {
+    margin-block-start: 16px;
     max-width: 100%;
     max-height: 100%;
 }
@@ -396,17 +422,20 @@ button.button-year-select.active {
     background-color: var(--gold-color);
     border: solid 5px #fff;
     border-radius: 100px;
-    z-index: 3;
+    z-index: 2;
 }
 
-.year-info .time-post .reveal {
+/* year-header-wrapper reveal */
+.year-info .time-post .reveal,
+.year-info .year-header-wrapper.reveal {
     position: relative;
     transform: translateY(150px);
     opacity: 0;
     transition: 1s all ease;
 }
 
-.year-info .time-post .reveal.active {
+.year-info .time-post .reveal.active,
+.year-info .year-header-wrapper.reveal.active {
     transform: translateY(0);
     opacity: 1;
 }
