--- a/vgk_timeline_style.css
+++ b/vgk_timeline_style.css
@@ -43,7 +43,7 @@ body {
     flex-direction: column;
     align-items: center;
     height: 100vh;
-    background-color: beige;
+    background-color: var(--light-background-color);
     background-size: 100vw 100vh;
     /* height when ad is present at bottom of page */
     /* height: calc(100vh - 125px); */
